# findable_v1

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  =7.0.0  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FINDABLE_SCORE_PROCESS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  PRODUCTION_INSTRUCTIONS.md  PROGRESS.md  Procfile  README.md  VENV_GUIDE.md  activate-venv.ps1  analysis_example.com.json  analysis_www.anthropic.com.json  docker-compose.prod.yml  docker-compose.yml  exp_samples.txt  exp_status.txt  findable-day31-wireframe-spec.md  findable-score-analyzer-day-to-day.md  findable-score-analyzer-project.md  full_audit_docs.python.org.json  full_audit_github.com.json  full_audit_httpbin.org.json  full_audit_moz.com.json  full_audit_netflix.com_tudum.json  full_audit_www.intercom.com.json  full_audit_www.shopify.com.json  lead_audit_results.json  lead_audit_results_v2.json  pyproject.toml  railway.toml  setup-venv.ps1  setup-venv.sh  start-worker.ps1  (+4 more)
.github/workflows/: ci.yml
api/: __init__.py  auth.py  config.py  database.py  deps.py  exceptions.py  logging.py  main.py  metrics.py  middleware.py  sentry.py
api/models/: __init__.py  alert.py  analytics.py  base.py  billing.py  calibration.py  embedding.py  run.py  site.py  snapshot.py  user.py
api/providers/: __init__.py
api/routers/: alerts.py  auth.py  billing.py  calibration.py  health.py  jobs.py  monitoring.py  public.py  questions.py  runs.py  sites.py  v1.py  web.py
api/schemas/: __init__.py  alert.py  billing.py  calibration.py  job.py  monitoring.py  responses.py  run.py  site.py  user.py
api/services/: __init__.py  alert_service.py  billing_service.py  crud.py  job_service.py  question_service.py  run_service.py  site_service.py
docs/paper/: main.tex  references.bib
frontend/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  report.spec.ts  site.spec.ts
frontend/types/: index.ts
migrations/: env.py
migrations/versions/: 4556f7a9cae5_initial.py  b1c2d3e4f5a6_add_embeddings_table.py  c2d3e4f5a6b7_add_run_version_column.py  d3e4f5a6b7c8_add_calibration_tables.py  e4f5a6b7c8d9_add_entity_recognition_weight.py  e5f6a7b8c9d0_add_site_type_to_calibration_samples.py  f6a7b8c9d0e1_add_perf_indexes.py
research/: I'm creating a program that analyzes websites for.md  findable_features_to_borrow.md  findable_score_gap_analysis.md  findable_score_v2_implementation.md
results/validation_custom_20260203_040806/: run_metadata.json
results/validation_quick_20260203_040800/: run_metadata.json
results/validation_quick_20260203_041640/: run_metadata.json
results/validation_quick_20260203_042356/: run_metadata.json
results/validation_quick_20260203_042933/: run_metadata.json
results/validation_quick_20260203_043401/: run_metadata.json
scripts/: __init__.py  __main__.py  _analyze_domains.py  _pillar_analysis.py  backfill_site_types.py  check_experiment.py  collect_negatives.py  conclude_experiment.py  debug_holdout.py  deploy_railway.ps1  direct_audit_test.py  e2e_calibration_test.py  e2e_quick_test.py  e2e_test_sites.py  expand_corpus.py  find_treatment_sites.py  fresh-restart.ps1  fresh-restart.sh  generate_paper_figures.py  init-db.sql  run_full_audit.py  run_lead_audits.py  run_local.sh  run_optimizer.py  run_real_observation.py  run_site_analysis.py  run_site_type_optimizer.py  run_validation.py  run_validation_study.py  setup_ab_experiment.py  start.py  test_calibration_flow.py  test_site_analysis.py
tests/: conftest.py
worker/: __init__.py  main.py  queue.py  redis.py  scheduler.py
(+264 files in other folders)
