[project]
name = "findable"
version = "0.1.0"
description = "Findable Score Analyzer - Measure AI sourceability for websites"
# readme omitted so Docker build succeeds when README.md is not copied (e.g. Railway cache); add back for PyPI
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Findable Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.4",

    # Auth
    "fastapi-users[sqlalchemy]>=13.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.2",
    "passlib[bcrypt]>=1.7.4",

    # Validation & Settings
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Background Jobs
    "rq>=1.15.1",
    "redis>=5.0.1",
    "rq-scheduler>=0.13.1",

    # HTTP & Crawling
    "httpx>=0.26.0",
    "playwright>=1.41.0",
    "url-normalize>=1.4.3",

    # Content Extraction
    "trafilatura>=1.6.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "html2text>=2024.2.26",

    # Embeddings & ML
    "sentence-transformers>=2.3.1",
    "tiktoken>=0.5.2",
    "numpy>=1.26.3",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "orjson>=3.9.12",

    # Monitoring
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.40.0",

    # Templates
    "jinja2>=3.1.3",
    "aiofiles>=23.2.1",

    # Cloud Storage
    "boto3>=1.34.25",

    # Payments
    "stripe>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
    "black>=24.1.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-redis>=4.6.0",
    "types-beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "worker"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]
"scripts/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["api", "worker"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
# Pragmatic type checking - catch real bugs, not cosmetic issues
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

# Per-module overrides
[[tool.mypy.overrides]]
module = ["tests.*", "worker.testing.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["worker.testing.runner"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["api", "worker"]
omit = ["*/tests/*", "*/__init__.py"]
